don't use URL.equals() or URL.hashCode()